# dgml

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.claude/skills/attestation/: SKILL.md
.claude/skills/dgml/: SKILL.md
.gemini/skills/attestation/: SKILL.md
.gemini/skills/dgml/: SKILL.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  release-clustering.yml  release-core.yml  release-dgml.yml  release-translators-pdf.yml
app-sample/: README.md  dgml-app-sample-server.py  dgml-app-sample.html
docs/: cli-reference.md  conversion.md  incremental-clustering.md  merkle-attestation.md  quickstart-clustering.md  quickstart_clustering.md  storage-layout.md
docs/chaining/: quickstart-chaining.md
get-started/: get-started.md  getstarted.md
scripts/: cluster_eval.py  compare-render-formats.py  compare_render_formats.py  coverage.sh  ground.py  rerender.py  verify.sh
tools/dgml2html/: README.md  dgml2html
tools/dgml2html/samples/: sample.dgml.html  (+1 more)
tools/dgml2jsonld/: README.md  pyproject.toml
tools/dgml2jsonld/samples/: sample.dgml.jsonld  sample.dgml.xml
tools/dgml2jsonld/src/dgml2jsonld/: __init__.py
tools/dgml2jsonld/tests/: test_dgml2jsonld.py
tools/dgml4models/: README.md  dgml4models
tools/rnc2jsonld/: README.md  pyproject.toml
tools/rnc2jsonld/samples/: sample.schema.jsonld  sample.schema.rnc
tools/rnc2jsonld/src/rnc2jsonld/: __init__.py
tools/rnc2jsonld/tests/: test_rnc2jsonld.py
(+1 files in other folders)
