[project]
name = "dgml2jsonld"
version = "0.1.0"
description = "Convert DGML semantic XML files to JSON-LD (XAST-convention lossless export)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Docugami" }]
dependencies = [
    "lxml>=5.0.0",
]

[project.scripts]
dgml2jsonld = "dgml2jsonld:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dgml2jsonld"]
