[project]
name = "rnc2jsonld"
version = "0.1.0"
description = "Convert DGML docset schema.rnc files to JSON-LD context."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Docugami" }]
dependencies = [
    "rnc2rng>=2.7.0",
]

[project.scripts]
rnc2jsonld = "rnc2jsonld:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rnc2jsonld"]
